fix footer height on mobile

--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -56,7 +56,7 @@
   .container {
     flex-direction: column;
     gap: 23px;
-    height: 800px;
+    height: 500px;
     justify-content: unset;
   }
 
